# recurrent-neural-net

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  bertrand_russell_ideas_that_have_harmed_mankind.txt  docker-compose.yml  layers.c  layers.h  lstm.c  lstm.h  main.c  makefile  meson.build  requirements.txt  set.c  set.h  std_conf.h  utilities.c  utilities.h  view_progres.py
.github/workflows/: ccpp.yml  cpplint.yml  dockerimage.yml
data/: eddan_full.txt
docker/: Dockerfile  README.md
docker/node/: app.js  taskmgr.js  utils.js
docs/: README.md  doxygenConfig
docs/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  layers_8h.html  layers_8h_source.html  lstm_8h.html  lstm_8h_source.html  set_8h.html  set_8h_source.html  std__conf_8h.html  std__conf_8h_source.html  structlstm__model__parameters__t-members.html  structlstm__model__parameters__t.html  structlstm__model__t-members.html  structlstm__model__t.html  structlstm__values__cache__t-members.html  structlstm__values__cache__t.html  structlstm__values__next__cache__t-members.html  structlstm__values__next__cache__t.html  structlstm__values__state__t-members.html  structlstm__values__state__t.html  structset__t-members.html  (+3 more)
examples/: progress-10-hours.csv
html/: README.md  index.html
python implementation/: environment.yml  recurrent-neural-net.py  recurrent_neural_net.py
src/: CMakeLists.txt  layers.c  lstm.c  main.c  meson.build  set.c  set.h  std_conf.h  utilities.c
(+32 files in other folders)
